Address and leadership

--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,24 @@
 
     <main class="container" id="info">
 
+        <section id="leadership">
+            <h2 class="section-title" data-kn="ಪದಾಧಿಕಾರಿಗಳ ವಿವರಗಳು" data-en="Leadership">ಪದಾಧಿಕಾರಿಗಳ ವಿವರಗಳು</h2>
+            <div class="leaders-grid">
+                <article class="card leader-card">
+                    <img src="images/State_President.jpeg" alt="State President" class="leader-photo">
+                    <h3 class="leader-name" data-kn="ಎ. ವೈ. ಹನುಮಂತರಾಯಪ್ಪ" data-en="A Y Hanumantharayappa">ಎ. ವೈ. ಹನುಮಂತರಾಯಪ್ಪ
+                    </h3>
+                    <p class="leader-role" data-kn="ರಾಜ್ಯಾಧ್ಯಕ್ಷರು" data-en="State President">ರಾಜ್ಯಾಧ್ಯಕ್ಷರು</p>
+                </article>
+        
+                <article class="card leader-card">
+                    <img src="images/General_Secretary.jpeg" alt="General Secretary" class="leader-photo">
+                    <h3 class="leader-name" data-kn="ದೇವರಾಜು ಪಿ. ಎಂ" data-en="Devaraju P M">ದೇವರಾಜು ಪಿ. ಎಂ</h3>
+                    <p class="leader-role" data-kn="ಪ್ರಧಾನ ಕಾರ್ಯದರ್ಶಿ" data-en="General Secretary">ಪ್ರಧಾನ ಕಾರ್ಯದರ್ಶಿ</p>
+                </article>
+            </div>
+        </section>
+
         <section>
             <h2 class="section-title" data-kn="ಮೂಲ ಕೃಷಿ ಮಾಹಿತಿ" data-en="Basic Farming Information">ಮೂಲ ಕೃಷಿ ಮಾಹಿತಿ</h2>
             <div class="grid">
@@ -131,12 +149,12 @@
             <a href="index.html" class="footer-brand">
                 <img src="images/logo/KRRS.png" class="footer-logo">
                 <div class="footer-text">
-                    <strong data-kn="ಕೃಷಿ ರಾಜ್ಯ ರೈತ ಸಂಘ" data-en="Krushi Rajya Raitha Sangha">
+                    <!-- <strong data-kn="ಕೃಷಿ ರಾಜ್ಯ ರೈತ ಸಂಘ" data-en="Krushi Rajya Raitha Sangha">
                         ಕೃಷಿ ರಾಜ್ಯ ರೈತ ಸಂಘ
                     </strong>
                     <p data-kn="ರೈತ ಕುಟುಂಬಗಳಿಗೆ ಬಲವಾದ ಭವಿಷ್ಯ" data-en="Building a stronger future for farming families">
                         ರೈತ ಕುಟುಂಬಗಳಿಗೆ ಬಲವಾದ ಭವಿಷ್ಯ
-                    </p>
+                    </p> -->
                 </div>
             </a>
 
